# tarameteo

./: .gitignore  .gitmodules  CHANGES.rst  CONTRIBUTING.rst  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.github/: renovate.json
.github/workflows/: test.yml
backend/: .dockerignore  Dockerfile  Makefile  README.rst  pyproject.toml  sample_config.json
backend/alembic/: env.py
backend/alembic/versions/: 5894800a7813_add_sensors_and_weather_data_tables.py
backend/docs/: cli.rst  conf.py  index.rst  modules.rst  tarameteo.rst  tarameteo.testing.rst
backend/tarameteo/: api.py  auth.py  cli.py  db.py  http.py  issuer.py  logger.py  models.py  queue.py  sensor.py  weather.py
backend/tarameteo/testing/: compose.py  db.py  fixtures.py  managers.py  services.py  unique.py
backend/tests/: models.py
backend/tests/integration/: conftest.py  test_api.py  test_issuer.py  test_mysql.py
backend/tests/unit/: test_api.py  test_auth.py  test_cli.py  test_db.py  test_http.py  test_issuer.py  test_logger.py  test_queue.py  test_sensor.py
backend/tests/unit/testing/: test_db.py  test_unique.py
firmware/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini  pyproject.toml
firmware/.cursor/rules/: arduino.mdc
firmware/cmake/: Arduino.cmake
firmware/include/: config.h.example
firmware/lib/BME280Sensor/: BME280Sensor.cpp  BME280Sensor.h
firmware/lib/CertificateManager/: library.json
firmware/lib/CertificateManager/include/: ArduinoAdapter.h  CertificateManager.h  IArduino.h  IWebServer.h  IWiFi.h  IWiFiClient.h  WebServerAdapter.h  WiFiAdapter.h  WiFiClientSecureAdapter.h  X509Parser.h
firmware/lib/CertificateManager/src/: CertificateManager.cpp  X509Parser.cpp
firmware/lib/HttpClient/: HttpClient.cpp  HttpClient.h
firmware/lib/MqttClient/: MqttClient.cpp  MqttClient.h
firmware/lib/PowerManager/: PowerManager.cpp  PowerManager.h
firmware/lib/TimeManager/: TimeManager.cpp  TimeManager.h
firmware/lib/WiFiManager/: WiFiManager.cpp  WiFiManager.h
firmware/scripts/: native_coverage.py
firmware/src/: main.cpp
firmware/tarameteo/: config.h.example  tarameteo.ino
firmware/test/mocks/: Arduino.h  Client.h  IPAddress.h  Preferences.h  Print.h  SPI.h  Stream.h  WebServer.h  WiFi.h  WiFiClient.h  WiFiClientSecure.h  WiFiUdp.h  Wire.h  esp_sleep.h  mocks.cpp
firmware/test/test_certificate_manager/: test_certificate_manager.cpp
firmware/test/test_certificate_manager/mocks/: mock_arduino_core.h  mock_web_server.h  mock_wifi.h  mock_wifi_client.h
firmware/test/test_integration/: test_wifi_connection.cpp
firmware/test/test_x509_parser/: test_x509_parser.cpp
frontend/: Dockerfile  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  useWebSocket.ts
mosquitto/: Dockerfile  docker-entrypoint.sh  mosquitto.tpl
pki/: Dockerfile  init.sh  publish.sh
