[project]
name = "tarameteo"
version = "0.0.0"
description = "Weather station at Notre-Dame-du-Laus"
authors = [
    {name = "Marc Tardif", email = "marc@taram.ca"}
]
readme = "README.rst"
repository = "https://github.com/cr3/tarameteo"
requires-python = ">=3.13,<4.0"
dependencies = [
    "platformio (>=6.1.18,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
